--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "main": "index.js",
     "scripts": {
         "dev": "tsnd --respawn --transpile-only src/index.ts",
+        "start": "node dist/index.js",
         "lint": "eslint src/**/*.ts",
-        "format": "eslint src/**/*.ts --fix"
+        "format": "eslint src/**/*.ts --fix",
+        "build": "rm -rf build && tsc --build"
     },
     "author": "Caio Fuccio",
     "license": "ISC",
