--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "author": "Caio Fuccio",
     "license": "ISC",
     "dependencies": {
+        "@types/swagger-ui-express": "^4.1.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "openai": "^4.55.1"
+        "openai": "^4.55.1",
+        "swagger-autogen": "^2.23.7",
+        "swagger-ui-express": "^5.0.1",
+        "ts-node": "^10.9.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
